2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated manual to show how to index https:// sites
	* Fixed small typo in the TS comment

2008-11-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2232: TYPO3SEARCH markers not respected
	* Fixed: CSS list was not aligned properly vertically
	* Fixed bug #2233: (No title) for found documents with spaces
	* Fixed bug #2236: Not all pages of the site are indexed
	* Small manual updates
	* Disable debug logging for now
	* Released version 2.1.4

2008-11-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Make found symbols bold by default
	* Fix regex to detect new lines in the title tag

11-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Remove old pager code
	* Fix search limit for records
	* Explain search limiting in the manual
	* Released version 2.1.3

06-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Do not attempt to create page title if none exists
	* Add information about Debian to the manual
	* Remove sending HTTP status code 304 as it may cause problems with some pages that contain records
	* Disable usage of "No index" flag
	* Check all ways to set page title in post processing hook
	* Released version 2.1.1
	* Fix "(no title)" for files
	* Remove UdmComment from everywhere because it may conflict with post processing hook
	* Released version 2.1.2

05-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed SQL error in TCEmain hook

31-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Make sure that functions are not defined more than once in tca.php
	* Add record reindexing to CLI script and TCEmain hook
	* Record only indexable pages in URL log
	* Rewrite manual
	* Added file icons
	* Add support for indexing OpenOffice documents
	* Released version 2.1.0

29-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Change to TCEmain to use 'pagepath' extension to get path in FE
	* Record new url when page/record is renamed
	* Get rid of 'FE' option during extension installation