@@ -35,7 +35,7 @@
 	<form class="tx-mnogosearch-long-form" action="###LONG_SEARCH_FORM_ACTION###" method="get">
 		<table>
 			<tr><td>
-				Search for:
+				###TEXT_SEARCH_FOR###
 			</td><td colspan="3">
 				<input size="50" type="text" name="tx_mnogosearch_pi1[q]" value="###LONG_SEARCH_FORM_VALUE###" />
 			</td></tr>
